# patientsim-pkg

./: .gitignore  LICENSE  README.md  pyproject.toml
src/patientsim/: __init__.py  admin_staff.py  checker.py  doctor.py  patient.py
src/patientsim/assets/prompt/: op_patient_sys.txt  op_staff_sys.txt
src/patientsim/client/: __init__.py  google_client.py  google_vertex_client.py  openai_azure_client.py  openai_client.py  vllm_client.py
src/patientsim/dataset/: __init__.py  manager.py
src/patientsim/environment/: ed_simulation.py  op_simulation.py
src/patientsim/registry/: detection_key.py
src/patientsim/utils/: common_utils.py  desc_utils.py
